[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ax"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.scripts]
ax = "ax.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ax*"]

