[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ax-runner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "docker>=7.0",
]

[project.scripts]
ax-runner = "runner.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runner*"]

